# fun

project-euler/032/: default.cabal
project-euler/032/app/: Main.hs
project-euler/033/app/: Main.hs
templates/: flake.nix
templates/haskell/: default.cabal  flake.nix
